# genopack

./: 404.html  CMakeLists.txt  DEREP_FORMAT.md  README.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
.scripts/: build_gtdb_r226.sh  rebuild_r226_multik.sh
Contig-Index/: index.html
Taxonomy-Export/: index.html
api/: index.html
changelog/: index.html
cli/: index.html  main.cpp
docs/: Contig-Index.md  Taxonomy-Export.md  api.md  changelog.md  cli.md  format.md  getting-started.md  index.md
docs/stylesheets/: extra.css
format/: index.html
getting-started/: index.html
include/genopack/: accx.hpp  archive.hpp  archive_set_reader.hpp  catalog.hpp  checksum.hpp  cidx.hpp  coordinator.hpp  derep_view.hpp  format.hpp  format_v2.hpp  geodf.hpp  geodf_reader.hpp  gidx.hpp  gtax.hpp  hnsw_section.hpp  kmrx.hpp  mem_delta.hpp  merger.hpp  mmap_file.hpp  ncbi_taxdb.hpp  ntdb.hpp  oph_sketch.hpp  repack.hpp  scan_engine.hpp  shard.hpp  skch.hpp  string_collision_heap.hpp  taxn.hpp  toc.hpp  tombstone.hpp  txdb.hpp  types.hpp  util.hpp
search/: search_index.json
src/: accx.cpp  appender.cpp  archive.cpp  archive_set_reader.cpp  builder.cpp  catalog.cpp  cidx.cpp  coordinator.cpp  derep_view.cpp  geodf_reader.cpp  gidx.cpp  gtax.cpp  hnsw_section.cpp  kmrx.cpp  mem_delta.cpp  merger.cpp  mmap_file.cpp  ncbi_taxdb.cpp  ntdb.cpp  oph_sketch.cpp  repack.cpp  scan_engine.cpp  shard.cpp  skch.cpp  taxn.cpp  taxon_registry.cpp  taxon_registry.hpp  toc.cpp  tombstone.cpp  txdb.cpp  util.cpp
tests/: benchmark.cpp  derep_view_test.cpp  mem_delta.cpp  skch_dual_seed.cpp  smoke.cpp  test_utils.hpp
